2/19/16 - 0.6.8 - Use unique sessions for each login. Option to check admin user using plex.tv. Add Season Folder option to Sonarr.
2/17/16 - 0.6.7 - Add preliminary SickRage support. Ability to rename users.
2/16/16 - 0.6.6 - Fixed sending to Couchpotato when using TMDB. Also added posters when confirming request in Plex Web
2/15/16 - 0.6.5 - Fixes for managing users. More specific user information displayed and cosmetic improvements.
2/13/16 - 0.6.4 - Manage Sickbeard shows in the Channel, allowing for manually selecting of seasons and episodes
2/12/16 - 0.6.3 - Added rudimentary ability for users to notify admin user of problems. The issue will be sent to admin through notifications only. More features added to this in the future.
2/12/16 - 0.6.2 - Added ability to view changelog in the Plex Channel. Find under 'Manage Channel'.
2/11/16 - 0.6.1 - Changelog added. Version information will be added here. Added a ability to manage sonarr from the channel.